--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "private": true,
     "dependencies": {
         "bootstrap": "^5.1.3",
+        "gh-pages": "^3.2.3",
         "react": "^17.0.2",
         "react-bootstrap": "^2.1.1",
         "react-device-detect": "^2.1.2",
@@ -17,7 +18,8 @@
         "predeploy": "npm run build",
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
