--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "private": true,
     "dependencies": {
         "bootstrap": "^5.1.3",
-        "gh-pages": "^3.2.3",
         "react": "^17.0.2",
         "react-bootstrap": "^2.1.1",
         "react-device-detect": "^2.1.2",
@@ -38,5 +37,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "gh-pages": "^3.2.3"
     }
 }
