--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "coc3",
     "version": "0.1.0",
-    "homepage": "https://eselfmade.github.io/coc3",
+    "homepage": "https://coc.eselfmade.in",
     "private": true,
     "dependencies": {
         "bootstrap": "^5.1.3",
