--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "react-bootstrap": "^2.1.1",
         "react-device-detect": "^2.1.2",
         "react-dom": "^17.0.2",
+        "react-lazy-load-image-component": "^1.5.1",
         "react-router-dom": "^6.2.1",
         "react-scripts": "5.0.0",
         "web-vitals": "^2.1.4"
